Fix content spacing for Scrollpages on mobile

--- a/app/styles/components/scroll-page.scss
+++ b/app/styles/components/scroll-page.scss
@@ -9,7 +9,7 @@
     scroll-snap-stop: always;
     scroll-snap-align: start;
     padding-top: var(--navigation-bar-height);
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
   }
 }
